src/main/python/compilador.g4
grammar compilador;

fragment LETRA : [A-Za-z] ;
fragment DIGITO : [0-9] ;

// Agrupadores
PA : '(' ;
PC : ')' ;
LLA : '{' ;
LLC : '}' ;
CA : '[' ;
CC : ']' ;
PYC : ';' ;
COMA : ',' ;

// Operadores Aritmeticos
ASIG : '=' ;
SUMA : '+' ;
RESTA : '-' ;
MULT : '*' ;
DIV : '/' ;
MOD : '%' ;

// Operadores compuestos de asignación
MASIG : '+=' ;
RESIG : '-=' ;
MULASIG : '*=' ;
DIVASIG : '/=' ;
MODASIG : '%=' ;

// Operadores LOGICOS
MENOR : '<' ;
MAYOR : '>' ;
MENOREQ : '<=' ;
MAYOREQ : '>=' ;
EQUAL : '==' ;
NEQUAL : '!=' ;

// Literales numéricos (DECIMAL antes de NUMERO para que 3.14 no se rompa)
DECIMAL : DIGITO+ '.' DIGITO+ ;
NUMERO : DIGITO+ ;

// Palabras reservadas
INT : 'int' ;
DOUBLE : 'double' ;
IF : 'if' ;
ELSE : 'else' ;
FOR : 'for' ;
WHILE : 'while' ;
RETURN : 'return' ;

ID : (LETRA | '_')(LETRA | DIGITO | '_')* ;

// Ignorar espacios en blanco
WS : [ \n\r\t] -> skip ;
OTRO : . ;

programa : instrucciones EOF ;

instrucciones : instruccion instrucciones
              |
              ;

instruccion : asignacion
            | declaracion
            | iif
            | iwhile
            | ifor
            | funcion
            | retorno
            | bloque
            | opal PYC
            ;

retorno : RETURN opal PYC ;
            
bloque : LLA instrucciones LLC ;

iwhile : WHILE PA opal PC instruccion ;

iif : IF PA opal PC instruccion ielse ;

ielse : ELSE instruccion
           |
           ;

ifor : FOR PA forInit PYC opal PYC asignacionFor PC bloque ;

// La inicialización del for puede ser una declaración (int i = 0) o una
// lista de asignaciones (x = 0, y = 1).
forInit : tipo ID inic listaVarFor
        | listaAsignacionFor
        ;

listaVarFor : COMA ID inic listaVarFor
            |
            ;

// Lista de asignaciones separadas por coma para la inicialización del for.
// Permite: for(x = 0, a = 1, z = 2; ...)
listaAsignacionFor : asignacionFor (COMA asignacionFor)* ;

// Versión de asignacion SIN punto y coma, usada en el incremento y en la
// inicialización del for.
// Se necesita porque 'asignacion' incluye PYC al final y dentro del for()
// ni la inicialización ni el incremento llevan punto y coma.
asignacionFor : ID (ASIG | MASIG | RESIG | MULASIG | DIVASIG | MODASIG) opal
              | ID (INCREMENTO | DECREMENTO)
              | (INCREMENTO | DECREMENTO) ID
              ;

declaracion : tipo ID inic listavar PYC ;

listavar: COMA ID inic listavar
        |
        ;

inic : ASIG opal
     |
     ;

tipo : INT
     | DOUBLE
     ;

asignacion : ID (ASIG | MASIG | RESIG | MULASIG | DIVASIG | MODASIG) opal PYC
          | ID (INCREMENTO | DECREMENTO) PYC
          | (INCREMENTO | DECREMENTO) ID PYC
          ;

INCREMENTO : '++' ;

DECREMENTO : '--' ;

opal : relacion
     ;

relacion : exp l ;

exp : term e ;

e : SUMA term e
  | RESTA term e
  |
  ;

term : factor t ;

t : MULT factor t
  | DIV factor t
  | MOD factor t
  |
  ;

l : MENOR exp l
  | MAYOR exp l
  | MENOREQ exp l
  | MAYOREQ exp l
  | EQUAL exp l
  | NEQUAL exp l
  |
  ;

funcion : tipo ID PA parametros PC bloque ;

parametros : tipo ID lista_param
           |
           ;

lista_param : COMA tipo ID lista_param
            |
            ;

factor : PA exp PC
       | NUMERO
       | DECIMAL
       | ID
       | ID PA argumentos? PC ;

argumentos : opal (COMA opal)* ;

prototipo : tipo ID PA parametrosTipados? PC PYC ; 
// int f(); | int lo(int arrSize); | int suma(int a, int b);

parametrosTipados : tipo ID (COMA tipo ID)* ;
// parametros tipo: int a, double b
